fix(datatable): truncate long column headings
No longer overflows its container. Test on config 37

Closes #2151

--- a/src/content/styles/modules/_table.scss
+++ b/src/content/styles/modules/_table.scss
@@ -24,6 +24,12 @@
 
             table {
                 table-layout: fixed; // make autowidth: false works for datatable https://datatables.net/forums/discussion/30530/set-fixed-column-width
+
+                thead > tr > th > span {
+                    display: block;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
             }
 
             .dataTables_wrapper {
